Don't use -XX:+ZGenerational by default, as only jdks since 21 have it
Signed-off-by: solonovamax <solonovamax@12oclockpoint.com>